# MonMouse

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-dep.yml  build.yml  check.yml  release.yml  snapshot.yml
assets/: monmouse.rc
conf/: example_monmouse.yml
dep-only/: main.rs
scripts/: get_rc_path.ps1
src/: bridge.rs  control.rs  device_type.rs  errors.rs  lib.rs  main.rs  message.rs  mouse_control.rs  notify.rs  setting.rs  utils.rs
src/cli/: main.rs
src/gui/: about_panel.rs  app.rs  config.rs  find_panel.rs  main.rs  manage_panel.rs  state.rs  styles.rs  tray.rs  widget.rs
src/gui/components/: about_panel.rs  config_panel.rs  debug.rs  devices_panel.rs  layout.rs  manage_panel.rs  mod.rs  status_bar.rs  widget.rs
src/keyboard/: key_egui.rs  key_windows.rs  mod.rs
src/windows/: constants.rs  mod.rs  win_processor.rs  wintypes.rs  winwrap.rs
