[package]
name = "monmouse"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "monmouse"

[features]
ui = []

[[bin]]
name = "monmouse-cli"
path = "src/cli/main.rs"

[[bin]]
name = "monmouse"
path = "src/gui/main.rs"

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4.11", features = ["derive"] }
eframe = "0.24.1"
egui_extras = "0.24.2"
serde = { version = "1.0.193", features = ["derive"] }
tray-icon = "0.11.1"
image = "0.24.7"
config = { version = "0.13.4", features = ["yaml"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_HiDpi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
]

[profile.release]
strip = true
